Overlapping Image Size Fix

--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,7 @@ body {
   position: relative;
 }
 .composition__photo {
-  width: 55%;
+  width: 65%;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
   border-radius: 0.3rem;
   position: absolute;
