--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,7 +1,7 @@
 .composition{
     position: relative;
     &__photo{
-        width: 55%;
+        width: 65%;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
         border-radius: $default-border-radius;
         position: absolute;
